# Vago

./: CHANGELOG.md  README.md  vago.cabal
app/: Main.hs
src/: Config.hs  Dummy.hs  Harvest.hs
