cabal-version:      3.4
name:               vago
version:            0.1.0.0
author:             CristhianMotoche
maintainer:         cristhian.motoche@gmail.com
extra-source-files: CHANGELOG.md

executable v
  main-is:          Main.hs
  build-depends:    base ^>=4.14.1.0, vago
  hs-source-dirs:   app
  default-language: Haskell2010

library
  exposed-modules: Dummy
  build-depends:    base ^>=4.14.1.0, random
  hs-source-dirs:   src
  default-language: Haskell2010
