cabal-version:      3.4
name:               vago
version:            0.1.0.0
author:             CristhianMotoche
maintainer:         cristhian.motoche@gmail.com
extra-source-files: CHANGELOG.md

executable v
  main-is:          Main.hs
  build-depends:    base ^>=4.14.1.0, vago
  hs-source-dirs:   app
  default-language: Haskell2010

library
  exposed-modules:
    Config
  build-depends:
    base ^>=4.14.1.0,
    random >= 1.2,
    http-client >= 0.7.8 && < 0.8,
    http-client-tls >= 0.3.5 && < 0.4
  hs-source-dirs:   src
  default-language: Haskell2010
